--- a/package.json
+++ b/package.json
@@ -33,5 +33,13 @@
       "bcrypt",
       "sharp"
     ]
+  },
+  "overrides": {
+    "@vercel/node": {
+      "typescript": "^5.8.3"
+    },
+    "ts-node": {
+      "typescript": "^5.8.3"
+    }
   }
 }
